syntax = "proto3";

package greeting;

option java_package = "com.thebytecloud.greeting";

option java_multiple_files = true;

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string response = 1;
}

service GreetingService {
    rpc sayHello(HelloRequest) returns (HelloResponse);
}